# fishers_exact_test

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tests.py
.github/workflows/: package-legacy.yml  package.yml  test.yml
fisher/: __init__.py
scripts/: rfisher.py
src/: cfisher.pyx
tests/: test_fisher.py
