[project]
name = "fisher-dbolser-test"
dynamic = ["version"]
description = "Fast Fisher's Exact Test"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Haibao Tang" },
    { name = "Brent Pedersen", email = "bpederse@gmail.com" },
]
keywords = ["statistics", "cython"]

dependencies = [
    "numpy>=1.24.4",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "http://github.com/brentp/fishers_exact_test"

[project.optional-dependencies]
dev = [
    "pip>=25.0.1",
    "pytest>=8.0",
    "ruff>=0.15.12",
    "setuptools>=75.3.4",
    "cython>=3.2.4",
    "numpy",
]

[build-system]
requires = ["setuptools", "cython", "numpy", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "fisher/_version.py"
versionfile_build = "fisher/_version.py"
tag_prefix = "v"
